# haskell-deploy-test

./: CHANGELOG.md  README.md  haskell-deploy-test.cabal
.github/workflows/: deploy.yml  git-deploy.yml  test.yml
